# tech-doc-extractor

./: .gitignore  README.md  example_usage.py  pyproject.toml  setup.py  tech_docs_scraper.py
examples/: example_crawl.py  example_usage.py
src/tech_doc_extractor/: __init__.py  agent.py  crawl.py  extractor.py
tests/: cached_api_response.pkl  test_crawl.py
